# DekaMojiPDF

./: .gitignore  .gitmodules  CMakeLists.txt  DMPDF.cpp  DMPDF_res.rc  DekaMoji.cpp  DekaMoji_res.rc  HISTORY.txt  LICENSE.txt  MCenterWindow.h  MColorBox.h  MImageView.h  MImageViewEx.h  MPageMgr.h  MTempFile.hpp  MTextToText.hpp  README.md  README.txt  Shareware.rc  do_build.bat  installer.iss  resource.h
lang/: en_US.rc  ja_JP.rc
res/: 1033_Cursor_32731.cur
